[package]
name = "kidon-git"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.35", features = ["derive", "color", "help", "usage", "suggestions"] }
enum_dispatch = "0.3.13"
nom = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
