[package]
name = "rust-git"
version = "0.1.0"
edition = "2024"

[features]
default = []
development = []

[dependencies]
anyhow = "1.0.97"
base16ct = { version = "0.2.0", features = ["alloc"] }
bincode = { version = "2.0.1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "color", "help", "usage", "suggestions"] }
colored = "3.0.0"
enum_dispatch = "0.3.13"
log = "0.4.27"
nom = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
simple_logger = { version = "5.0.0", features = ["colors"] }
